--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "gltfjsx": "^6.2.16",
+    "i18next": "^23.11.2",
     "jsdom": "^24.0.0",
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "three": "^0.163.0"
   },
   "devDependencies": {
