--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
+    "react-icons": "^5.1.0",
     "react-responsive-carousel": "^3.2.23",
     "three": "^0.163.0"
   },
