--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@uidotdev/usehooks": "github:uidotdev/usehooks",
     "gltfjsx": "^6.2.16",
     "i18next": "^23.11.2",
     "jsdom": "^24.0.0",
