--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^24.0.0",
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.1.0",
