--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^14.1.1",
     "react-icons": "^5.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.5",
     "three": "^0.163.0"
   },
   "devDependencies": {
